--- a/index.html
+++ b/index.html
@@ -43,15 +43,24 @@
         <h2>Create your hero</h2>
         <div class="field">
           <label for="name">Name</label>
-          <input type="text" id="name" name="hero[name]"/>
+          <input type="text" id="name" name="hero[name]" />
         </div>
         <div class="field">
           <label for="job">Job</label>
           <div id="job-wrapper"></div>
         </div>
         <div class="field">
-          <label for="image">Img</label>
-          <input type="file" id="image" name="hero[image]" />
+          <p>Choose your avatar</p>
+
+          <div class="icon-upload-image">
+            <label for="image">
+              <img
+              src="https://image.flaticon.com/icons/png/512/3342/3342137.png"
+              alt="#">
+            </label>
+            
+            <input type="file" id="image" name="hero[image]" />
+          </div>         
         </div>
 
         <div class="field">
