delete heroes profile demo

--- a/index.html
+++ b/index.html
@@ -19,23 +19,7 @@
 
     <div class="form-wrapper">
       <div class="hero-card">
-        <div class="hero-profile">
-          <div class="level-profile">LV1</div>
-          <img class="img-profile" src="#" alt="#">
-          <div class="name-profile">Lisa</div>
-          <div class="job-profile">mage</div>
-
-          <div class="status-profile">
-            <label for="hp-txt">HP</label>
-            <div class="hp-profile">100</div>
-            <label for="mp-txt">MP</label>
-            <div class="mp-profile">99</div>
-          </div>
-        </div>
-
-        <div class="btn-update-delete">
-          <button class="btn-update">update</button>
-          <button class="btn-delete">delete</button>
+        <div id="hero-profile">
         </div>
       </div>
 
