--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           </div>         
         </div>
 
-        <div class="field">
+        <div class="btn-submit">
           <input id="btn-submit-hero" type="submit" />
         </div>
       </div>
